# Faeyne_lang

./: .gitignore  =131.0.2  Cargo.toml  README.md  dump.txt  log.txt  matrix.fay  perf.data  perf.data.old  sample.fay  stack.rs
ast/: Cargo.toml
ast/src/: ast.rs  id.rs  lexer.rs  lib.rs  parser.lalrpop  test_parsing.rs
examples/: bench_stack.rs  layout.rs  stack_bench.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: ast.rs  basic_ops.rs  chunked_list.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  reporting.rs  runners.rs  runtime.rs  sketch_better_ir.rs  stack.rs  system.rs  test_code.rs  test_code_easy.rs  test_code_old.rs  test_parsing.rs  translate.rs  utils.rs  value.rs  vm.rs
