[package]
name = "faeyne_lang"
version = "0.1.0"
edition = "2021"

default-run="faeyne_lang"
# Add a build-time dependency on the lalrpop library:


[dependencies]
ast = { path = "ast" }


codespan = "0.11.1"
codespan-reporting = "0.11.1"
lalrpop-util = "0.21.0"



#[dev-dependencies]
mem_viewer = "0.3.0"


[dependencies.stacker]
version = "0.1"
optional = true

[features]
default = ["ConsistentStackSize"]
ConsistentStackSize = ["stacker"]



[profile.release]
debug = true

