[package]
name = "faeyne_lang"
version = "0.1.0"
edition = "2021"

default-run="faeyne_lang"
# Add a build-time dependency on the lalrpop library:


[dependencies]
arrayvec = "0.7.6"
ast = { path = "ast" }


codespan = "0.11.1"
codespan-reporting = "0.11.1"
lalrpop-util = "0.21.0"



#[dev-dependencies]
mem_viewer = "0.3.0"
smallvec = "1.13.2"
# smallvec = "1.13.2"


[features]
default = []
debug_terminators = []



[profile.release]
debug = true

