[package]
name = "faeyne_lang"
version = "0.1.0"
edition = "2021"

default-run="faeyne_lang"
# Add a build-time dependency on the lalrpop library:


[dependencies]
arrayvec = "0.7.6"
ast = { path = "ast" }
clap = "4.5.20"


codespan = "0.11.1"
codespan-reporting = "0.11.1"
lalrpop-util = "0.21.0"



#[dev-dependencies]
mem_viewer = "0.3.0"
smallvec = "1.13.2"
# smallvec = "1.13.2"


[features]
default = []
debug_mode=["debug_print_vm","debug_terminators"]
debug_terminators = []
debug_print_vm = []


[profile.release]
debug = true

